--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 #quote-box {
   position: absolute;
-  top: 20%;
+  top: 40%;
   left: 10%;
   right: 10%;
   width: 80%;
@@ -58,18 +58,31 @@ body {
 }
 
 #loadQuote {
-  position: fixed;
+  /* position: fixed; */
   width: 12em;
   display: inline-block;
-  left: 50%;
+  /* left: 50%; */
   margin-left: -6em;
-  bottom: 50px;
+  /* bottom: 50px; */
   border-radius: 4px;
   border: 2px solid #fff;
   color: #fff;
   background-color: #36b55c;
   padding: 15px 0;
   transition: .5s ;
+}
+.header{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 80%;
+  margin: auto;
+  padding-top: 5rem;
+}
+.header h1{
+  margin: 0;
+  font-size: 55px;
+  line-height: 40px;
 }
 #loadQuote:hover {
   background-color: rgba(255,255,255,.25);
